--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,25 +1,11 @@
 .page {
   box-sizing: border-box;
-  min-width: 1024px;
   width: 100%;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
   background-color: #2A2C2F;
   color: #fff;
-  font-family: 'Inter';
-}
-
-@media screen and (min-width: 1280px) {
-  .page {
-    min-width: 1280px;
-  }  
-}
-
-@media screen and (max-width: 1024px) {
-  .page {
-    min-width: 425px;
-  }
+  font-family: 'Inter', sans-serif;
 }
 
 @media screen and (max-width: 425px) {
